deploy/k8s/01-agent-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent-registry
  namespace: default
  labels:
    app: agent-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent-registry
  template:
    metadata:
      labels:
        app: agent-registry
    spec:
      containers:
        - name: agent-registry
          image: gcr.io/crajah-dev/agent-registry:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: agent-registry-service
  namespace: default
  labels:
    app: agent-registry
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 8001
      name: http
  selector:
    app: agent-registry
