deploy/k8s/04-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent-london-frontend
  namespace: default
  labels:
    app: agent-london-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent-london-frontend
  template:
    metadata:
      labels:
        app: agent-london-frontend
    spec:
      containers:
        - name: agent-london-frontend
          image: gcr.io/marty-457112/agent-london-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: agent-london-frontend-service
  namespace: default
  labels:
    app: agent-london-frontend
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: agent-london-frontend
